--- a/UpcomingActivities/style.css
+++ b/UpcomingActivities/style.css
@@ -5,6 +5,10 @@
 	padding: 2px 10px;
 }
 
+.navbar .navbar-nav .nav-item .nav-link:hover,.navbar .navbar-nav .nav-item .nav-link:active{
+    color: gold;
+  }
+
 .footer{
 	background: #800000;
 	color: #d3d3d3;
