--- a/sprint-1/donate.css
+++ b/sprint-1/donate.css
@@ -1,77 +1,108 @@
-*{
-	margin: 0;
-	padding: 0;
-}
 
-.heading{
-	padding: 50px;
-}
-.header{
-	height: 10vh;
 
-}
-header{
-
-	height: 40vh;
-	
-}
-
-.navbar .navbar-nav .nav-item .nav-link:hover,.navbar .navbar-nav .nav-item .nav-link:active{
-	color: gold;
-}
-
-.navbar-style{
-	box-shadow: 0 5px 10px #efefef;
-}
 .logo{
 	height: 50px;
-	padding: 2px 10px;
-}
-/* what does this do, and what class can it be found in*/
-.icon-bar{
-    background: red;
-}   
-
-.footer{
-	background: #800000;
-	color: #d3d3d3;
-	height: 400px;
-}
-.footer .footer-bottom{
-	background: #6b0000;
-	color: #686868;
-	height: 50px;
-	text-align: center;
-	width: 100%;
-	position: absolute;
-	padding-top: 15px;
-	left: 0px;
-}
-.footer .footer-content{
-	border: 1px solid red;
-	display: flex;
-	height: 350px;
-}
-.footer .footer-content .footer-section{
-	flex: 1;
-	padding: 25px;
-	padding-right: 50px;
-	padding-left: 75px;
-}
-html, body{
-	height: 100%;
-	padding:0px;
-	margin: 0px;
-	background: #f6f6f6; 
-	font-family: 'Lora', serif;
-}
-.link{
+  padding: 2px 10px;
+  }
+  
+  .navbar .navbar-nav .nav-item .nav-link:hover,.navbar .navbar-nav .nav-item .nav-link:active{
 	color: gold;
-}
-
-.work{
-	padding:20px
-}
-.main{
-	padding-right:30%;
-}
+  }
+  
+  .footer{
+  background: #800000;
+  color: #d3d3d3;
+  height: 400px;
+  }
+  .footer .footer-bottom{
+  background: #6b0000;
+  color: #686868;
+  height: 50px;
+  text-align: center;
+  width: 100%;
+  position: absolute;
+  padding-top: 15px;
+  left: 0px;
+  }
+  .footer .footer-content{
+  border: 1px solid red;
+  display: flex;
+  height: 350px;
+  }
+  .footer .footer-content .footer-section{
+  flex: 1;
+  padding: 25px;
+  padding-right: 50px;
+	padding-left: 75px;
+  }
+  
+  .link{
+  color: gold;
+  }
+  .foot-text{
+	color: white;
+  }
+  .pic-header{
+	width:100%;
+	height:0px;
+	z-index:0;
+	height: auto;
+  }
+  
+  .img{
+  height: 200px;
+  padding: 2px 10px;
+  margin:5px;
+  float: left;
+  }
+  
+  
+  .leader{
+  margin:10px;
+  }
+  
+  .event{
+  margin-bottom: 30px;
+  height: 200px;
+  width: 350;
+  }
+  
+  button{
+  height: 40px;
+  width:70px;
+  border-radius: 20px;
+  background-color: white;
+  border: 2px solid darkred;
+  margin: 50px;
+  }
+  
+  button:hover{
+  background-color: darkred;
+  
+  }
+  
+  .wrapper{
+  margin: 0 auto;
+  padding: 60px;
+  
+  }
+  
+  h2{
+  margin: 30px;
+  text-align: center;
+  padding:30px;
+  }
+  
+  
+  .event-test{
+  float:right;
+  }
+  
+  .work{
+	  padding:20px
+  }
+  
+  
+  
+  
+  
