--- a/Become a member/member.css
+++ b/Become a member/member.css
@@ -1,97 +1,129 @@
 *{
-    margin: 0;
-    padding: 0;
-  }
-  
-  .heading{
-    padding-bottom: 20px;
-  }
-
-  header{
-    /* background-image: url(leaders.jpg); */
-    height: 50vh;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-  }
-  
-  .navbar-style{
-     box-shadow: 0 5px 10px #efefef;
-    text-transform: uppercase;
-    
-  }
-
-  .navbar .navbar-nav .nav-item .nav-link:hover,.navbar .navbar-nav .nav-item .nav-link:active{
-    color: gold;
-  }
-
-  .heading{
-    padding: 50px;
-  }
-  
-  .logo{
-    height: 50px;
-    padding: 2px 10px;
-  }
-
-  .center {
-    text-align: center;
-    padding: 10px;
+  margin: 0;
+  padding: 0;
 }
 
-  .icon-bar{
-    background: darkorange;
-  }
 
 
-  li a{
-    color:black;
-  }
+/* body {
+  font-family: 'Almendra';font-size: 22px;
+} */
 
-  .footer{
-    background: #800000;
-    color: #d3d3d3;
-    height: 400px;
-  }
-  .footer .footer-bottom{
-    background: #6b0000;
-    color: #686868;
-    height: 50px;
-    text-align: center;
-    width: 100%;
-    position: absolute;
-    padding-top: 15px;
-    left: 0px;
-  }
-  .footer .footer-content{
-    border: 1px solid red;
-    display: flex;
-    height: 350px;
-  }
-  .footer .footer-content .footer-section{
-    flex: 1;
-    padding: 25px;
-    padding-right: 50px;
-    padding-left: 75px;
-  }
+.heading{
+  padding-bottom: 20px;
+}
+
+header{
+  /* background-image: url(leaders.jpg); */
+  height: 50vh;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+}
+
+.navbar-style{
+   box-shadow: 0 5px 10px #efefef;
+  text-transform: uppercase;
+  
+}
+
+.navbar .navbar-nav .nav-item .nav-link:hover,.navbar .navbar-nav .nav-item .nav-link:active{
+  color: gold;
+}
 
 
-  .form-container{
-    position: relative;
-    top: 15vh;
-    margin-bottom: 250px;
-    background: #fff;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px 0px #000;
-    
-  }
 
-  html, body{
-    height: 100%;
-    padding: 0px;
-    margin: 0px;
-    background: #f6f6f6; 
-    font-family: 'Lora', serif;
-  }
+
+
+.heading{
+  padding: 50px;
+}
+
+.logo{
+  height: 50px;
+  padding: 2px 10px;
+}
+
+.center {
+  text-align: center;
+  padding: 20px;
+  background-color: #800000;
+  margin-bottom: 0px;
+  color: #686868;
+}
+
+.icon-bar{
+  background: darkorange;
+}
+
+
+li a{
+  color:black;
+}
+
+.footer{
+  background: #800000;
+  color: #d3d3d3;
+  height: 400px;
+}
+.footer .footer-bottom{
+  background: #6b0000;
+  color: #686868;
+  height: 50px;
+  text-align: center;
+  width: 100%;
+  position: absolute;
+  padding-top: 15px;
+  left: 0px;
+}
+.footer .footer-content{
+  border: 1px solid red;
+  display: flex;
+  height: 350px;
+}
+.footer .footer-content .footer-section{
+  flex: 1;
+  padding: 25px;
+  padding-right: 50px;
+  padding-left: 75px;
+}
+
+
+.form-container{
+  position: relative;
+  top: 15vh;
+  margin-top: 0px;
+  margin-bottom: 250px;
+  background: #fff;
+  padding: 30px;
+  /* border-radius: 10px; */
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.212);
+  
+}
+
+/* html, body{
+  height: 100%;
+  padding: 0px;
+  margin: 0px;
+  background: #f6f6f6; 
+  font-family: 'Lora', serif;
+} */
+
+.area{
+    width: 50%;
+    margin: auto;
+}
+
+.collapse .navbar-nav .active1{
+    color: #800000;
+}
+
+
+
+/* html {
+  background-image: url(footer-logo.jpg);
+  background-size: cover;
+} */
+
+
 
