--- a/UpcomingActivities/style.css
+++ b/UpcomingActivities/style.css
@@ -1,4 +1,75 @@
+  /* The popup form - hidden by default */
+  .form-popup {
+	display: none;
+	position: fixed;
+	margin: auto;
+	width: 20%;
+	bottom: 100px;
+	left: 600px;
+	
+	/* bottom: 0; */
+	/* right: 15px; */
+	border: 3px solid #f1f1f1;
+	/* z-index: 9; */
+	align-items: center;
+	
+  }
+  
+  /* Add styles to the form container */
+  .form-container {
+	max-width: 300px;
+	padding: 10px;
+	background-color: white;
+	justify-content: center;
+	
+  }
+  
+  /* Full-width input fields */
+  .form-container input[type=text], .form-container input[type=password] {
+	width: 100%;
+	padding: 15px;
+	margin: 5px 0 22px 0;
+	border: none;
+	background: #f1f1f1;
+  }
+  
+  /* When the inputs get focus, do something */
+  .form-container input[type=text]:focus, .form-container input[type=password]:focus {
+	background-color: #ddd;
+	outline: none;
+  }
+  
+  /* Set a style for the submit/login button */
+  .form-container .btn {
+	background-color: #4CAF50;
+	color: white;
+	padding: 16px 20px;
+	border: none;
+	cursor: pointer;
+	width: 100%;
+	margin-bottom:10px;
+	opacity: 0.8;
+  }
+  
+  /* Add a red background color to the cancel button */
+  .form-container .cancel {
+	background-color: red;
+  }
+  
+  /* Add some hover effects to buttons */
+  .form-container .btn:hover, .open-button:hover {
+	opacity: 1;
+  }
 
+
+
+  .modal-content{
+	  width: 500px;
+	  height: 3oopx;
+	  background-color: white;
+	  border-radius: 4px;
+
+  }
 
 .logo{
     height: 50px;
@@ -12,7 +83,9 @@
 .footer{
 	background: #800000;
 	color: #d3d3d3;
-	height: 400px;
+	/* height: 400px; */
+	height: 2500%;
+
 }
 .footer .footer-bottom{
 	background: #6b0000;
@@ -97,6 +170,8 @@ h2{
 .event-test{
 	float:right;
 }
+
+
 
 
 
