--- a/UpcomingActivities/style.css
+++ b/UpcomingActivities/style.css
@@ -1,4 +1,4 @@
-  /* The popup form - hidden by default */
+
   .form-popup {
 	display: none;
 	position: fixed;
@@ -12,6 +12,7 @@
 	border: 3px solid #f1f1f1;
 	/* z-index: 9; */
 	align-items: center;
+	box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.212);
 	
   }
   
